app/assets/stylesheets/frontend/_layout.scss
/* ... */
.section {
	padding:100px 0;
	h1 {
		text-align:center;
	}
}
.page, .newspage, .coffeeadventurepage {
	.section {
		padding:100px 0;
		h1 {
			text-align:center;
			padding-top: 30px;
			padding-bottom: 30px;
			border-top: 1px solid #ccc;
			max-width: 520px;
			margin: 0 auto;
		}
	}
}
#section-one {
	hr {
		max-width:520px;
		margin:0 auto;
		border-top:1px solid #ccc;
	}
	h1 {
		padding-top:30px;
		padding-bottom:30px;
		border-top:1px solid #ccc;
		max-width:520px;
		margin:0 auto;
	}
}
#footer-wrapper {
	background:asset-url("bg-footer-top.png") no-repeat top center;
	padding-top:50px;

	#footer {
		background:asset-url("bg-dark.jpg");
		min-height:286px;
		padding-top:30px;

		.wrap {
			overflow:hidden;

			.mailing-wrapper {
				float:left;
				width:25%;
			}
			.footer-navigation {
				float:left;
				width:50%;
			}
			.social-wrapper {
				float:left;
				width:25%;
			}
		}
	}
}
.mailing-wrapper {
	.mailing {
		border-right:1px solid #999;
		border-right:1px solid rgba(255,255,255,0.2);
		padding-right:30px;
		min-height:190px;
		h5, p {
			color:#999;
			color:rgba(255,255,255,0.5);
		}
		h5 {
			margin-bottom:10px;
		}
		p {
			font-size:12px;
			line-height:16px;
		}
	}
}
.footer-navitaion-wrapper {
	.footer-navigation {
		border-right:1px solid #999;
		border-right:1px solid rgba(255,255,255,0.2);
		padding-top:30px;
		padding-right:30px;
		min-height:190px;
		.col {
			float:left;
			width:30%;
		}
		ul.footer_nav {
			margin-top: 0;
			li {
				list-style: none;
			}
			ul {
				margin:0;
				margin-right:3%;
				padding:0;
				li {
					list-style:none;
					padding-left:20px;
					margin-bottom:20px;

					a {
						font-size:10px;
						line-height:12px;
						color:#fff;
						opacity:0.5;
						display:block;
						text-decoration:none;
						@include transition;

						&:hover {
							opacity:1;
						}
					}

					&.active {
						a {
							opacity:1;
						}
					}
				}
			}
		}
	}
}
.social-wrapper {
	.social {
		.footer-logo {
			text-align:right;
			overflow:hidden;
			img {
				float:right;
				margin-left:10px;
				width:60px;
			}
			span {
				font-family: 'Lato', sans-serif;
				font-size:16px;
				line-height:18px;
				color:#999;
				color:rgba(255,255,255,0.5);
				display:block;
				padding-top:5px;
				width: 110px;
				float: right;
			}
		}

		.social-links {
			padding-top:50px;
			text-align:right;
			.social-title {
				color:#999;
				color:rgba(255,255,255,0.5);
				font-family: 'Lato', sans-serif;
				font-size:16px;
				line-height:20px;
				display:block;
				margin-bottom:10px;
			}
			ul {
				list-style:none;
				margin:0;
				padding:0;
				li {
					display:inline-block;
					margin-left:15px;

					a {
						img {
							@include transition;
							opacity:0.5;
						}
						&:hover {
							img {
								opacity:1;
							}
						}
					}
				}
			}
		}
	}
}
.wrap-column-3 {
	width:100%;
	position:relative;

	.col {
		width:33.33%;
		float:left;
	}
}

.post-item {
	overflow:hidden;
	.post-image {
		position:relative;
		margin-bottom:15px;
		img {
			max-width:100%;
		}
		.category {
			position:absolute;
			left:0;
			bottom:0;
			font-family: 'Lato', sans-serif;
			color:#fff;
			font-size:14px;
			line-height:14px;
			text-transform:uppercase;
			background:$greenDarkColor;
			padding:15px 20px;
		}
	}
	.post-meta {
		margin-bottom:10px;
		.post-title {
			margin-bottom:10px;
			font-size:20px;
			line-height:22px;
			font-weight:bold;

			display: inline-block;
			max-width: 100%;
			width:100%;
			overflow: hidden;
			text-overflow: ellipsis;
			vertical-align: top;
			white-space:nowrap;

			a {
				color:$greenColor;

				&:hover {
					color:$greenDarkColor;
					text-decoration:none;
				}
			}
		}
		.post-date {
			font-size:14px;
			line-height:16px;
		}
	}
}
.news-post-list {
	ul {
		margin:0;
		padding:0;
		list-style:none;
		overflow:hidden;
		li {
			margin:0 1.5%;
			margin-bottom:20px;
			padding:0;
			padding-bottom:20px;
			border-bottom:1px solid #CECECE;
			width:30.3%;
			float:left;

			&:nth-child(even) {
				//margin-left:2%;
			}
		}
	}

}
.pagination {
	ul {
		margin:0;
		padding:0;
		list-style:none;
		overflow:hidden;
		li {
			display:inline-block;
			margin-right:30px;
			padding-right:30px;
			border-right:1px solid #ccc;
			font-family: 'Lato', sans-serif;
				font-size:20px;
				line-height:20px;
				font-weight:300;
				color:$lightColor;



			&:last-child {
				border-right:none;
			}

			a {
				//text-decoration:underline;
				text-decoration:none;
				display: inline-block;
				border-bottom:1px solid $linkColor;
				padding-bottom:2px;
				span {
					color:$brownColor;
					border-bottom:1px solid $brownColor;
				}

				&:hover {
					text-decoration:none;
					span {
						color:$greenDarkColor;
						border-bottom:1px solid $greenDarkColor;
					}
				}
			}

			&.active {
		        a {
		          text-decoration: none;
		          border-bottom:1px solid $greenDarkColor;
		        }
		    }
		}
	}
}
li.post-list {
	margin:0;
	padding:0;

	a {
		padding:30px 20px;
		font-size:14px;
		line-height:20px;
		text-transform:uppercase;
		color:$greenColor;
		text-decoration:none;
		font-family: 'Lato', sans-serif;
		display:block;
		@include transition;
		border-top:1px solid #CECECE;

		&:hover {
			color:$greenDarkColor;
			background:#fff;
			text-decoration:none;
		}
	}

	&:last-child {
		a {
			border-bottom: 1px solid #cecece;
		}
	}


	&:nth-child(odd) {
		a {
			background:rgba(255,255,255,0.2);

			&:hover {
				background:#fff;
			}
		}
	}
}
#event-gallery {
	max-width:1400px;
	margin:0 auto;
	position:relative;

	ul {
		margin:0;
		margin-bottom:50px;
		padding:0;
		list-style:none;
		overflow:hidden;

		li {
			margin:0;
			padding:0;
			width:25%;
			float:left;

			img {
				max-width:100%;
			}
		}
	}
	.btn-holder {
		text-align:center;
	}
}
/* ... */

